RESOLVED FIXED 87142
REGRESSION(r117613): Dromaeo/jslib-style-prototype regressed by 20%
https://bugs.webkit.org/show_bug.cgi?id=87142
Summary REGRESSION(r117613): Dromaeo/jslib-style-prototype regressed by 20%
Tony Chang
Reported 2012-05-22 10:12:17 PDT
Probably because I moved CSSPropertyDisplay from the fast table to the slow table.
Attachments
Patch (6.71 KB, patch)
2012-05-22 11:35 PDT, Tony Chang
no flags
Tony Chang
Comment 2 2012-05-22 11:35:54 PDT
Tony Chang
Comment 3 2012-05-22 11:37:13 PDT
This seemed to fix the regression on my machine, but I see a 5% swing in the test results locally, so it's hard to be certain (the graph shows similar variance).
WebKit Review Bot
Comment 4 2012-05-22 13:49:21 PDT
Comment on attachment 143334 [details] Patch Clearing flags on attachment: 143334 Committed r118044: <http://trac.webkit.org/changeset/118044>
WebKit Review Bot
Comment 5 2012-05-22 13:49:26 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2012-12-18 09:49:55 PST
This caused bug 105275.
Note You need to log in before you can comment on or make changes to this bug.