REGRESSION(r117613): Dromaeo/jslib-style-prototype regressed by 20% https://bugs.webkit.org/show_bug.cgi?id=87142

Reviewed by Alexis Menard.

Move CSSPropertyDisplay back into isValidKeywordPropertyAndValue.
Pass in the parser context so we can check whether we're grid or not.

No new tests. Covered by Dromaeo/jslib-style-prototype perf test.

* css/CSSParser.cpp:
(WebCore::isValidKeywordPropertyAndValue):
(WebCore::isKeywordPropertyID):
(WebCore::parseKeywordValue):
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::parseFont):


Canonical link: https://commits.webkit.org/104875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118044 268f45cc-cd09-0410-ab3c-d52691b4dbfc